Bug 17884 - Fresh upstream bits based on git commit 81acc574 do not compile on RHEL[56].
Summary: Fresh upstream bits based on git commit 81acc574 do not compile on RHEL[56].
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: releng (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-27 09:29 UTC by Martin Cermak
Modified: 2015-01-27 17:06 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Cermak 2015-01-27 09:29:14 UTC
Fresh upstream bits based on git commit 81acc574 do not compile on RHEL[56].

  CXX      stap-dwflpp.o
dwflpp.cxx: In member function ‘int dwflpp::iterate_over_plt(T*, void (*)(T*, const char*, size_t)) [with T = void]’:
dwflpp.cxx:1426: error: ‘EM_AARCH64’ was not declared in this scope
make[2]: *** [stap-dwflpp.o] Error 1
make[2]: Leaving directory `/root/mcermak-systemtap/systemtap'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/root/mcermak-systemtap/systemtap'
make: *** [all] Error 2

Looks like caused by commit 81acc574. RHEL7 and Fedora do not seem to be affected.
Comment 1 William Cohen 2015-01-27 15:37:18 UTC
Commit d34906046678a970bd9665c5a065126c9cb57ad6 should fix this issue.
Comment 2 Martin Cermak 2015-01-27 17:06:02 UTC
yup, confirmed