Make EM_AARCH64 backup definition more generally available (PR17884)

There are older versions of elf.h that do not have a definition of
EM_AARCH64.  There was a backup definition of EM_AARCH64 in
tapset.cxx, but also need this definition for dwflpp.cxx.  Moved the
definition EM_AARCH64 to dwflpp.h to make it more generally visible.